# NN-Steiner

./: .gitignore  README.md  requirements.txt
REST_out/: 1000_10000x10000-uniform.txt  100_10000x10000-uniform.txt  2000_10000x10000-uniform.txt  200_10000x10000-uniform.txt  5000_10000x10000-uniform.txt  500_10000x10000-uniform.txt  50_10000x10000-uniform.txt  800_10000x10000-uniform.txt
arora/: __main__.py
arora/quadtree/lib/: CMakeLists.txt  __init__.py  geosteiner.cpp  geosteiner.h
arora/quadtree/lib/geosteiner-5.3/: ChangeLog  INSTALL  LICENSE  Makefile  Makefile.in  README  RELEASE_NOTES  aclocal.m4  analyze.c  analyze.h  analyze_ckpt  analyze_ckpt.c  analyze_ckpt.dep  bb  bb.c  bb.dep  bb.h  bbmain.c  bbox.awk  bbsubs.c  bbsubs.h  bitmaskmacros.h  bmst.c  bmst.h  bsd.c  bsd.h  btsearch.c  btsearch.h  callback.c  callback.dep  callback.h  channels.c  channels.dep  channels.h  check_lib_syms.sh  ckpt.c  ckpt.h  config.h  config.h.in  config.status  (+206 more)
arora/quadtree/lib/geosteiner-5.3/lp_solve_2.3/: Makefile  Makefile.in  lpbinio.c  lpkit.c  lpkit.h  solve.c
arora/quadtree/rmst/: CMakeLists.txt  __init__.py  main.cpp  pybind11.cpp  rmst.cpp  rmst.hpp
arora/quadtree/rmst/include/: Makefile  README  err.c  gen.c  main.c  mst1.c  mst1.h  mst2.c  mst8.c  mst8.h  neighbors.c  sample.in  sample.out_guibas  sample.out_prim  sample.out_scheffer  sd2.c  sd2.h  unixtimer.c
conf/: config.yaml
evaluator/: evaluateRatio.py  evaluateSTT.py
exp/: data_gen.sh  geo.sh  mst.sh  nn.sh  nn_.sh  ratio_flute.sh  ratio_rest.sh  refine.sh  snapped.sh
tests/: __init__.py  (+2 more)
(+4567 files in other folders)
